<package>
  <name>sr_movements</name>
  <version>1.4.0</version>
  <description>Contains a node which can be used to take the hand through a series of movements (perfect for tuning
    controllers for example).</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_movements</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>control_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sr_utilities</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>libmagick</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>control_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sr_utilities</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sr_hand</run_depend>
  <run_depend>libmagick</run_depend>

</package>
