<package>
  <name>sr_self_test</name>
  <version>1.2.0</version>
  <description>sr_self_test</description>
  <maintainer email="software@shadowrobot.com">Ugo Cupcic</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_self_test</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>sr_movements</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>sr_hand</run_depend>
  <run_depend>sr_movements</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>gtest</run_depend>

<export>
    <cpp lflags="-L${prefix}/lib -lsr_self_test" cflags="-I${prefix}/include"/>
</export>

</package>