<package>
  <name>sr_self_test</name>
  <version>1.4.0</version>
  <description>sr_self_test</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_self_test</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>sr_movements</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>sr_hand</run_depend>
  <run_depend>sr_movements</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>gnuplot</run_depend>
  
  <test_depend>gtest</test_depend>

</package>
