<package>
  <name>sr_standalone</name>
  <version>1.3.0</version>
  <description>sr_standalone is a wrapper allowing shadow_robot to be used from outside of ROS (with ROS installed on the system)</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_utilities</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Manos Nikolaidis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sr_hand</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_hand</run_depend>
  
</package>
