<package>
  <name>sr_tactile_sensors</name>
  <version>1.2.0</version>
  <description>An interface to the tactile sensors used in the Shadow Dextrous Hand. Also Contains a virtual set of sensors.</description>
  <maintainer email="">Ugo Cupcic</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_tactile_sensors</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sr_robot_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>gazebo_plugins</test_depend> -->

</package>